bootstrap files and style.css file added

--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 10 Assignment</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 <div class="container">
-<div id="calculateDifferenceAnswer"> </div>
-<div id="calculateOddOrEven"> </div>
-<div id="ArrayMinimum"> </div>
-<div id="filterEvenNumbers"> </div>
-<div id="sortArrayDescending"> </div>
-<div id="lowercaseFirstLetter"> </div>
-<div id="findAverage"> </div>
+    <h2>1) Write a function named calculateDifference that takes two arguments and returns the difference between the first and second argument.</h2>
+    <div id="calculateDifferenceAnswer"></div>
+
+    <h2>2) Write a function named isOdd that takes one argument and returns true if the number is odd, and false if it is not.</h2>
+    <div id="calculateOddOrEven"></div>
+
+    <h2>3) Write a function named findMin that takes an array of numbers and returns the smallest number in the array.</h2>
+    <div id="ArrayMinimum"></div>
+
+    <h2>4) Write a function named filterEvenNumbers that takes an array of numbers and returns a new array containing only the even numbers.</h2>
+    <div id="filterEvenNumbers"></div>
+
+    <h2>5) Write a function named sortArrayDescending that takes an array of numbers and returns a new array sorted in descending order.</h2>
+    <div id="sortArrayDescending"></div>
+
+    <h2>6) Write a function named lowercaseFirstLetter that takes a string and returns the string with the first letter in lowercase.</h2>
+    <div id="lowercaseFirstLetter"></div>
+
+    <h2>7) Write a function named countVowels that takes a string and returns the number of vowels (a, e, i, o, u, A, E, I, O, U) in the string. It should filter vowels from the string.</h2>
+    <div id="countVowels"></div>
+
+    <h2>8) Write a function named findAverage that takes an array of numbers and returns the average of all elements.</h2>
+    <div id="findAverage"></div>
 </div>
 
-<script src="index.js"></script>
+<script src="js/index.js"></script>
+<script src="js/bootstrap.bundle.js"></script>
+
 </body>
+
 </html>
